--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,26 @@
 {
-    "name": "laravel/lumen-framework",
-    "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "name": "agungsugiarto/php-mini-framework",
+    "description": "The PHP Mini Framework.",
+    "keywords": ["framework", "mini-framework", "php-mini-framework"],
     "license": "MIT",
-    "homepage": "https://lumen.laravel.com",
+    "homepage": "https://github.com/agungsugiarto/php-mini-framework",
     "support": {
-        "issues": "https://github.com/laravel/lumen-framework/issues",
-        "source": "https://github.com/laravel/lumen-framework"
+        "issues": "https://github.com/agungsugiarto/php-mini-framework/issues",
+        "source": "https://github.com/agungsugiarto/php-mini-framework"
     },
     "authors": [
         {
             "name": "Taylor Otwell",
             "email": "taylor@laravel.com"
+        },
+        {
+            "name": "Agung Sugiarto",
+            "email": "me.agungsugiarto@gmail.com"
         }
     ],
     "require": {
         "php": "^8.0.2",
-        "illuminate/auth": "^9.36.3",
+        "dragonmantank/cron-expression": "^3.1",
         "illuminate/broadcasting": "^9.36.3",
         "illuminate/bus": "^9.36.3",
         "illuminate/cache": "^9.36.3",
@@ -30,7 +34,6 @@
         "illuminate/events": "^9.36.3",
         "illuminate/filesystem": "^9.36.3",
         "illuminate/hashing": "^9.36.3",
-        "illuminate/http": "^9.36.3",
         "illuminate/macroable": "^9.36.3",
         "illuminate/pagination": "^9.36.3",
         "illuminate/pipeline": "^9.36.3",
@@ -41,12 +44,18 @@
         "illuminate/validation": "^9.36.3",
         "illuminate/view": "^9.36.3",
         "illuminate/log": "^9.36.3",
-        "dragonmantank/cron-expression": "^3.1",
+        "laminas/laminas-diactoros": "^2.17",
+        "laminas/laminas-httphandlerrunner": "^2.1",
+        "league/route": "^5.1",
+        "psr/container": "^1.0|^2.0",
+        "psr/http-factory": "^1.0",
+        "psr/http-message": "^1.0.1",
+        "psr/http-server-handler": "^1.0.1",
+        "psr/http-server-middleware": "^1.0.1",
+        "psr/simple-cache": "^1.0",
         "nikic/fast-route": "^1.3",
         "symfony/console": "^6.0",
         "symfony/error-handler": "^6.0",
-        "symfony/http-kernel": "^6.0",
-        "symfony/http-foundation": "^6.0",
         "symfony/mime": "^6.0",
         "symfony/var-dumper": "^6.0",
         "vlucas/phpdotenv": "^5.4.1"
@@ -56,13 +65,11 @@
         "phpunit/phpunit": "^9.5.8"
     },
     "suggest": {
-        "laravel/tinker": "Required to use the tinker console command (^2.7).",
-        "nyholm/psr7": "Required to use PSR-7 bridging features (^1.2).",
-        "symfony/psr-http-message-bridge": "Required to use PSR-7 bridging features (^2.0)."
+        "laravel/tinker": "Required to use the tinker console command (^2.7)."
     },
     "autoload": {
         "psr-4": {
-            "Laravel\\Lumen\\": "src/"
+            "Mini\\Framework\\": "src/"
         },
         "files": [
             "src/helpers.php"
