--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,8 @@ name: tests
 on:
   push:
     branches:
-      - php-mini-framework
+      - master
+      - '*.x'
   pull_request:
   schedule:
     - cron: '0 0 * * *'
