--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,8 @@
         "psr/http-server-handler": "^1.0.1",
         "psr/simple-cache": "^1.0",
         "nikic/fast-route": "^1.3",
+        "spatie/flare-client-php": "^1.3",
+        "spatie/ignition": "^1.4",
         "symfony/console": "^6.0",
         "symfony/error-handler": "^6.0",
         "symfony/mime": "^6.0",
